tests/golden/type_errors/match_guard_undefined_binding.cd
enum Result { Ok(number), Empty }
let result = Result.Ok(1);
let label = match result {
  Result.Ok(value) if missing > 0 => "positive",
  Result.Empty => "empty",
};
