tests/golden/type_errors/match_guard_undefined_binding.err
Type error at 4:23: undefined variable `missing`
    Result.Ok(value) if missing > 0 => "positive",
                        ^
